# main.js
@@ -1,14 +1,13 @@
 require("dotenv").config();
-//#region express configures
 var express = require("express");
 var path = require("path");
 var logger = require("morgan");
 const session = require("client-sessions");
 const DButils = require("./routes/utils/DButils");
-var cors = require('cors')
+var cors = require("cors");
 
 var app = express();
-app.use(logger("dev")); //logger
+app.use(logger("dev")); // logger
 app.use(express.json()); // parse application/json
 app.use(
   session({
@@ -19,7 +18,7 @@ app.use(
     activeDuration: 1000 * 60 * 5, // if expiresIn < activeDuration,
     cookie: {
       httpOnly: false,
-    }
+    },
     //the session will be extended by activeDuration milliseconds
   })
 );
@@ -28,14 +27,18 @@ app.use(express.static(path.join(__dirname, "public"))); //To serve static files
 //local:
 app.use(express.static(path.join(__dirname, "dist")));
 //remote:
-// app.use(express.static(path.join(__dirname, '../assignment-3-3-basic/dist')));
-app.get("/",function(req,res)
-{ 
-  //remote: 
-  // res.sendFile(path.join(__dirname, '../assignment-3-3-basic/dist/index.html'));
+// app.use(
+//   express.static(
+//     path.join(__dirname, "../assignment3-2-209264241_318734399/dist")
+//   )
+// );
+app.get("/", function (req, res) {
+  //remote:
+  // res.sendFile(
+  //   path.join(__dirname, "../assignment3-2-209264241_318734399/dist/index.html")
+  // );
   //local:
-  res.sendFile(__dirname+"/index.html");
-
+  res.sendFile(__dirname + "/index.html");
 });
 
 // app.use(cors());
@@ -43,26 +46,25 @@ app.get("/",function(req,res)
 
 const corsConfig = {
   origin: true,
-  credentials: true
+  credentials: true,
 };
 
 app.use(cors(corsConfig));
 app.options("*", cors(corsConfig));
 
-var port = process.env.PORT || "80"; //local=3000 remote=80
+var port = process.env.PORT || "3000"; //local=3000 remote=80
 //#endregion
 const user = require("./routes/user");
 const recipes = require("./routes/recipes");
 const auth = require("./routes/auth");
 
-
 //#region cookie middleware
 app.use(function (req, res, next) {
-  if (req.session && req.session.user_id) {
-    DButils.execQuery("SELECT user_id FROM users")
+  if (req.session && req.session.username) {
+    DButils.execQuery("SELECT username FROM users")
       .then((users) => {
-        if (users.find((x) => x.user_id === req.session.user_id)) {
-          req.user_id = req.session.user_id;
+        if (users.find((x) => x.username === req.session.username)) {
+          req.username = req.session.username;
         }
         next();
       })
@@ -87,8 +89,6 @@ app.use(function (err, req, res, next) {
   res.status(err.status || 500).send({ message: err.message, success: false });
 });
 
-
-
 const server = app.listen(port, () => {
   console.log(`Server listen on port ${port}`);
 });
@@ -99,3 +99,5 @@ process.on("SIGINT", function () {
   }
   process.exit();
 });
+
+module.exports = app;
